                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
[ When backported to 2.2.x, remove entry from this file ]

  *) mod_cache: Revalidate cache entities which have Cache-Control: no-cache
     set in their response headers. PR 44511 [Ruediger Pluem]

  *) mod_rewrite: Check all files used by DBM maps for freshness, mod_rewrite
     didn't pick up on updated sdbm maps due to this.
     PR41190 [Niklas Edmundsson]

  *) rotatelogs: Added '-f' option to force rotatelogs to create the
     logfile as soon as started, and not wait until it reads the
     first entry. [Jim Jagielski]

  *) mod_proxy: Do not try a direct connection if the connection via a
     remote proxy failed before and the request has a request body.
     [Ruediger Pluem]

  *) mod_include: Correctly handle SSI directives split over multiple filter
     passes.  PR 44447 [Harald Niesche <harald brokenerror.de>]

  *) http_filters: Don't return 100-continue on client error
     PR 43711 [Chetan Reddy <chetanreddy gmail.com>]

  *) mod_substitute: The default is now flattening the buckets after
     each substitution. This was mostly done to abide by the
     Principle Of Least Astonishment. The newly added 'q' flag allows for
     the quicker, more efficient bucket-splitting if the user so
     desires. [Jim Jagielski]

  *) Added 'disablereuse' option for ProxyPass which, essentially,
     disables connection pooling for the backend servers.
     [Jim Jagielski]

  *) Activate mod_cache, mod_file_cache and mod_disc_cache as part of the
     'most' set for '--enable-modules' and '--enable-shared-mods'. Include 
     mod_mem_cache in 'all' as well. [Dirk-Willem van Gulik]

  *) Also install mod_so.h, mod_rewrite.h and mod_cache.h; as these
     contain public function declarations which are useful for
     third party module authors. PR 42431 [Dirk-Willem van Gulik].

  *) mod_dir, mod_negotiation: pass the output filter information